--- a/front-service/index.html
+++ b/front-service/index.html
@@ -8,11 +8,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+<div class="container">
+    <div id="initialView">
         <h2>Active Reading Quiz</h2>
         <button class="button" id="getUrlButton">Generate Quiz</button>
         <div id="urlDisplay"></div>
     </div>
+
+    <div id="secondView" style="display: none;">
+        <h2>Quiz</h2>
+        <div id="quizContainer">
+        </div>
+        <div class="button-container">
+            <button class="button" id="generateAgainButton">Generate Again</button>
+            <button class="button" id="goBackButton">Go Back</button>
+        </div>
+    </div>
+</div>
+
+
 </body>
 <script src="script.js"></script>
 </html>
