--- a/front-service/index.html
+++ b/front-service/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Active Reading Quiz Extension</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="/js/script.js"></script>
 </head>
 <body>
 <div class="container">
@@ -40,5 +41,4 @@
 
 
 </body>
-<script type="module" src="js/script.js"></script>
 </html>
