--- a/front-service/index.html
+++ b/front-service/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Active Reading Quiz Extension</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script type="module" src="/js/script.js"></script>
 </head>
 <body>
 <div class="container">
+    <button id="themeToggle" class="theme-toggle">
+        <i class="fas fa-moon"></i>
+    </button>
+
     <div id="initialView">
         <h2>Active Reading Quiz</h2>
         <div class="button-container-vertical">
