include a logic to increment question number

--- a/front-service/index.html
+++ b/front-service/index.html
@@ -35,6 +35,7 @@
 
     <div id="secondView" style="display: none;">
         <h2>Quiz</h2>
+        <div class="question-counter">Question <span id="currentQuestion">1</span></div>
         <div id="quizContainer">
         </div>
         <div class="button-container">
