--- a/front-service/index.html
+++ b/front-service/index.html
@@ -15,6 +15,9 @@
         <i class="fas fa-moon"></i>
     </button>
 
+    <div id="alertContainer"></div>
+
+
     <div id="initialView">
         <h2>Active Reading Quiz</h2>
         <div class="button-container-vertical">
