add a score UI and logic to randomize question options to user

--- a/front-service/index.html
+++ b/front-service/index.html
@@ -43,9 +43,21 @@
         </div>
         <div class="button-container">
             <button class="button" id="generateAgainButton">Generate Again</button>
-            <button class="button" id="goBackButton">Go Back</button>
+            <button class="button" id="goBackButton">Finish</button>
         </div>
     </div>
+
+    <div id="resultsView" style="display: none;">
+        <h2>Quiz Results</h2>
+        <div class="results-container">
+            <i class="fas fa-award results-icon"></i>
+            <div class="score-text">You got <span id="correctAnswers">0</span> out of <span id="totalQuestions">0</span> correct!</div>
+        </div>
+        <div class="button-container">
+            <button class="button" id="retryButton">Try Again</button>
+        </div>
+    </div>
+
 </div>
 
 
