fixed some bugs regarding indexing & time

--- a/front-service/index.html
+++ b/front-service/index.html
@@ -85,7 +85,7 @@
                 </label>
             </div>
             <div class="setting-item">
-                <label class="switch-label">Time Limit</label>
+                <label class="switch-label">Time Limit of Question</label>
                 <div class="time-input-container">
                     <div class="time-inputs">
                         <div class="time-field">
@@ -94,7 +94,7 @@
                         </div>
                         <div class="time-field">
                             <label>Seconds:</label>
-                            <input type="number" id="secondsInput" min="60" max="600" value="60" class="time-input">
+                            <input type="number" id="secondsInput" min="1" max="60" value="60" class="time-input">
                         </div>
                     </div>
 
