introduce game modes that modify timer based on difficulty level

--- a/front-service/index.html
+++ b/front-service/index.html
@@ -100,6 +100,14 @@
 
                 </div>
             </div>
+            <div class="setting-item">
+                <div class="difficulty-selector">
+                    <button class="difficulty-btn" data-difficulty="easy" id="easyModeBtn">Easy</button>
+                    <button class="difficulty-btn" data-difficulty="medium" id="mediumModeBtn">Medium</button>
+                    <button class="difficulty-btn" data-difficulty="hard" id="hardModeBtn">Hard</button>
+                </div>
+            </div>
+
 
         </div>
         <div class="button-container">
