add logic for UI part - Optionality for language selection

--- a/front-service/index.html
+++ b/front-service/index.html
@@ -64,28 +64,28 @@
         <h2>Settings</h2>
         <div class="settings-container">
             <div class="setting-item">
-                <label class="switch-label">Default Questions</label>
+                <label class="switch-label" data-setting-type="defaultQuestions">Default Questions</label>
                 <label class="switch">
                     <input type="checkbox" id="defaultQuestionsToggle">
                     <span class="slider round"></span>
                 </label>
             </div>
             <div class="setting-item">
-                <label class="switch-label">True/False Questions</label>
+                <label class="switch-label" data-setting-type="trueFalseQuestions">True/False Questions</label>
                 <label class="switch">
                     <input type="checkbox" id="trueFalseToggle">
                     <span class="slider round"></span>
                 </label>
             </div>
             <div class="setting-item">
-                <label class="switch-label">Type answer Questions</label>
+                <label class="switch-label" data-setting-type="typeAnswerQuestions">Type answer Questions</label>
                 <label class="switch">
                     <input type="checkbox" id="typeAnswerToggle">
                     <span class="slider round"></span>
                 </label>
             </div>
             <div class="setting-item">
-                <label class="switch-label">Time Limit of Question</label>
+                <label class="switch-label" data-setting-type="timeLimit">Time Limit of Question</label>
                 <div class="time-input-container">
                     <div class="time-inputs">
                         <div class="time-field">
